PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 7.3.9

- Curl:
  . Fixed bug #77946 (Bad cURL resources returned by curl_multi_info_read()).
    (Abyr Valg)

- Standard:
  . Fixed bug #69100 (Bus error from stream_copy_to_stream (file -> SSL stream)
    with invalid length). (Nikita)

01 Aug 2019, PHP 7.3.8

- Core:
  . Added syslog.filter=raw option. (Erik Lundin)
  . Fixed bug #78212 (Segfault in built-in webserver). (cmb)

- Date:
  . Fixed bug #69044 (discrepency between time and microtime). (krakjoe)
  . Updated timelib to 2018.02. (Derick)

- FTP:
  . Fixed bug #78039 (FTP with SSL memory leak). (Nikita)

- Libxml:
  . Fixed bug #78279 (libxml_disable_entity_loader settings is shared between
    requests (cgi-fcgi)). (Nikita)

- LiteSpeed:
  . Updated to LiteSpeed SAPI V7.4.3 (increased response header count limit from
    100 to 1000, added crash handler to cleanly shutdown PHP request, added
    CloudLinux mod_lsapi mode). (George Wang)
  . Fixed bug #76058 (After "POST data can't be buffered", using php://input
    makes huge tmp files). (George Wang)

- Openssl:
  . Fixed bug #78231 (Segmentation fault upon stream_socket_accept of exported
    socket-to-stream). (Nikita)

- Opcache:
  . Fixed bug #78189 (file cache strips last character of uname hash). (cmb)
  . Fixed bug #78202 (Opcache stats for cache hits are capped at 32bit NUM).
    (cmb)
  . Fixed bug #78271 (Invalid result of if-else). (Nikita)
  . Fixed bug #78291 (opcache_get_configuration doesn't list all directives).
    (Andrew Collington)

- PCRE:
  . Fixed bug #78197 (PCRE2 version check in configure fails for "##.##-xxx"
    version strings). (pgnet, Peter Kokot)

- PDO_Sqlite:
  . Fixed bug #78192 (SegFault when reuse statement after schema has changed).
    (Vincent Quatrevieux)

- Phpdbg:
  . Fixed bug #78297 (Include unexistent file memory leak). (Nikita)
